# RVDD-release

./: CMakeLists.txt  LICENSE  README.md  libBridge.cpp  library.py  requirements.txt  train.py  validate.py
data/: __init__.py  axel4rec_dataset.py  base_dataset.py  infer4rec_dataset.py
dataset/: fwd_ppipe.py  generate_raw_from_RGB.py  lanceur_ppipe.sh  white_balance_coeffs_train_iso12800.txt  white_balance_coeffs_train_iso3200.txt  white_balance_coeffs_val_iso12800.txt  white_balance_coeffs_val_iso3200.txt
docs/: index.html
models/: base_model.py  recurrent_model.py
networks/: __init__.py  new_unet.py  unet.py
options/: base_options.py  train_options.py
scripts/: test-non_recurrent-convunet.sh  test-non_recurrent-future-convunet.sh  test-non_recurrent-no_warp-convunet.sh  test-non_recurrent-no_warp-future-convunet.sh  test-recurrent-ConvNeXtUnet.sh  test-recurrent-convunet.sh  test-recurrent-feat-convunet.sh  test-recurrent-feat-future-ConvNeXtUnet.sh  test-recurrent-feat-future-convunet.sh  test-recurrent-future-convunet.sh  train-non_recurrent-convunet.sh  train-non_recurrent-future-convunet.sh  train-non_recurrent-no_warp-convunet.sh  train-non_recurrent-no_warp-future-convunet.sh  train-recurrent-ConvNeXtUnet.sh  train-recurrent-convunet.sh  train-recurrent-feat-ConvNeXtUnet.sh  train-recurrent-feat-convunet.sh  train-recurrent-feat-future-ConvNeXtUnet.sh  train-recurrent-feat-future-convunet.sh  train-recurrent-future-ConvNeXtUnet.sh  train-recurrent-future-convunet.sh
trained-nets/: non_recurrent-convunet-future-iso12800_net_Denoise.pth  non_recurrent-convunet-future-iso3200_net_Denoise.pth  non_recurrent-convunet-iso12800_net_Denoise.pth  non_recurrent-convunet-iso3200_net_Denoise.pth  non_recurrent-convunet-no_warp-future-iso12800_net_Denoise.pth  non_recurrent-convunet-no_warp-future-iso3200_net_Denoise.pth  non_recurrent-convunet-no_warp-iso12800_net_Denoise.pth  non_recurrent-convunet-no_warp-iso3200_net_Denoise.pth  (+12 more)
(+5 files in other folders)
